# catia-drawing-assistant

./: .gitignore  README.md
catia-drawing-assistant/: README.md  pyproject.toml
catia-drawing-assistant/catia_assistant/: ai_provider.py  cli.py  config.py  runner.py  templates.py  ui.py  workflows.py
catia-drawing-assistant/catia_assistant/templates/: detail_a1.vbs  detail_pages.vbs  exploded.vbs  status.vbs  views.vbs
catia-drawing-assistant/tests/: test_core.py
docs/: codex-skill-guide.md  github-publishing.md  tutorial.md
docs/superpowers/plans/: 2026-05-26-catia-drawing-assistant.md
docs/superpowers/specs/: 2026-05-26-catia-drawing-assistant-design.md
scripts/: generate_detail_page_pdfs.vbs  generate_drawing_views.vbs  generate_exploded_view.vbs
skills/catia-automation/: SKILL.md
skills/catia-automation/agents/: openai.yaml
